# mojibase-v2

./: .gitignore  chatparse.py  griditems.py  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  stx.py  upload.js  upload.py
bates/: buildglyphs.py
bates/BP/scripts/: stickers.js
static/: stickerindex_inverted.json  stickers.json  stickers_i.json
static/css/: style.css  styles.bak.css
static/js/: bundle.js  filterworker.js  gridworker.js  index.js  isoworker.js  script.js
static/json/: all.json  stickerindex.json
templates/: 404.html  gi.html  index.bak.html  index.html
